<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.nbmp</groupId>
  <artifactId>waveform-experiments</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Archetype - waveform-experiments</name>
  <url>http://maven.apache.org</url>


  <properties>
    <javafx-sdk.path>C:/Users/alawi/Downloads/Compressed/openjfx-22.0.2_windows-x64_bin-sdk/javafx-sdk-22.0.2</javafx-sdk.path>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <spotless.version>2.42.0</spotless.version>
    <git-code-format-maven-plugin.version>5.3</git-code-format-maven-plugin.version>
  </properties>

  <dependencies>
      <dependency>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
          <version>1.18.34</version>
          <scope>provided</scope>
      </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.17.0</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>17.0.2</version>
    </dependency>
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-media</artifactId>
          <version>17.0.2</version>
      </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-base</artifactId>
      <version>17.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>17.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>17.0.0</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <!-- Specify the fully qualified name of your main class -->
          <mainClass>SineWave</mainClass>
          <arguments>
            <!-- Add the module-path and JavaFX modules -->
            <argument>--module-path</argument>
            <argument>${javafx-sdk.path}/lib</argument>
            <argument>--add-modules</argument>
            <argument>javafx.controls,javafx.fxml</argument>
          </arguments>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.43.0</version>
        <configuration>
          <java>
            <!-- These are the defaults, you can override if you want -->
            <includes>
              <include>src/main/java/**/*.java</include>
              <include>src/test/java/**/*.java</include>
            </includes>


            <googleJavaFormat>
              <version>1.17.0</version>                      <!-- optional, 1.8 is the minimum supported version for Java 11 -->
              <style>GOOGLE</style>                       <!-- or AOSP (optional) -->
              <reflowLongStrings>true</reflowLongStrings> <!-- optional -->
              <formatJavadoc>false</formatJavadoc>        <!-- optional -->
              <!-- optional: custom group artifact (you probably don't need this) -->
              <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>
            </googleJavaFormat>

            <importOrder /> <!-- standard import order -->
            <importOrder>  <!-- or a custom ordering -->
              <wildcardsLast>false</wildcardsLast> <!-- Optional, default false. Sort wildcard import after specific imports -->
              <order>java|javax,org,com,com.diffplug,,\#com.diffplug,\#</order>  <!-- or use <file>${project.basedir}/eclipse.importorder</file> -->
              <!-- you can use an empty string for all the imports you didn't specify explicitly, '|' to join group without blank line, and '\#` prefix for static imports. -->
              <semanticSort>false</semanticSort> <!-- Optional, default false. Sort by package, then class, then member (for static imports). Splitting is based on common conventions (packages are lower case, classes start with upper case). Use <treatAsPackage> and <treatAsClass> for exceptions. -->
              <treatAsPackage> <!-- Packages starting with upper case letters. -->
                <package>com.example.MyPackage</package>
              </treatAsPackage>
              <treatAsClass> <!-- Classes starting with lower case letters. -->
                <class>com.example.myClass</class>
              </treatAsClass>
            </importOrder>

            <removeUnusedImports>
              <engine>google-java-format</engine>    <!-- optional. Defaults to `google-java-format`. Can be switched to `cleanthat-javaparser-unnecessaryimport` (e.g. to process JDK17 source files with a JDK8+ Runtime) -->
            </removeUnusedImports> <!-- fixes formatting of type annotations, see below -->

            <licenseHeader>
              <content>/* (C)$YEAR */</content>  <!-- or <file>${project.basedir}/license-header</file> -->
            </licenseHeader>
          </java>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
